# Sumerian_Proverbs

./: .gitignore  README.md  create_proverb_archive.py  generate_proverb.py  proverb_game.py  pyproject.toml  random_proverb.py  train_proverb_model.py  utility.py
