[project]
name = "sumerian-proverbs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bs4>=0.0.2",
    "cryptography>=44.0.0",
    "datasets>=2.14.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "torch>=2.0.0",
    "transformers>=4.36.0",
]
